increase memory for jboss
git-svn-id: http://escidev5.fiz-karlsruhe.de:8888/prototype/eSciDocCore@38705 5c398c58-3d0a-0410-a38c-d0825f6816e0