@@ -647,7 +647,8 @@
 									<cargo.servlet.port>8080</cargo.servlet.port>
 									<cargo.rmi.port>1099</cargo.rmi.port>
 									<cargo.logging>medium</cargo.logging>
-									<cargo.jvmargs>-Dhttp.proxyHost=proxy.fiz-karlsruhe.de
+									<cargo.jvmargs>-Xmx1024m -Xms312m -XX:MaxPermSize=320m 
+										-Dhttp.proxyHost=proxy.fiz-karlsruhe.de
 										-Dhttp.proxyPort=8888
 										-Dhttp.nonProxyHosts="*.escidoc.de|*escidoc.org|localhost"</cargo.jvmargs>
 								</properties>
